# python-o-bom-candidato

./: .gitignore  Dockerfile  Makefile  README.md  README.pages  STATES.PY  csv_info.txt  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: candidate_card.html  candidate_info.html  index.html
python_o_bom_candidato/: PATHS_AND_URLS.py  STATES.PY  api.py  app.py  config.py  crawler.py  data_processing.py  db_operations.py
