[tool.poetry]
name = "python-o-bom-candidato"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"
bs4 = "^0.0.2"
pymongo = "^4.8.0"
jinja2 = "^3.1.4"
httpx = "^0.27.0"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]
fastapi = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
